# group11112025Project

./: .env-example  .gitignore  README.md  docker-compose.yaml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: alembic.ini  main.py  settings.py
backend/app/apps/auth/: auth_handler.py  password_handler.py
backend/app/apps/core/: base_model.py  dependencies.py
backend/app/apps/products/: crud.py  models.py  routers.py  s3.py
backend/app/apps/users/: crud.py  models.py  routers.py  schemas.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: 2026_02_06_1824-4dc16e19063d_init.py  2026_02_06_1840-d0ea9b965cd0_add_user_address.py  2026_03_06_1810-7ba9eeb2166b_products.py
frontend/: pyproject.toml
frontend/app/: main.py  routers.py
frontend/app/static/css/: styles.css
frontend/app/templates/: base.html
frontend/app/templates/components/: auth.html  navbar.html
frontend/app/templates/pages/: index.html  login.html  product.html  sign-up.html
