[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.3",
    "asyncpg>=0.31.0",
    "bcrypt==4.1.3",
    "fastapi[standard]>=0.128.0",
    "passlib>=1.7.4",
    "psycopg[binary]>=3.3.2",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
]
